--- a/public/css/sprites.css
+++ b/public/css/sprites.css
@@ -1,7 +1,7 @@
 /*** SPRITES ***/
 /* icons */
 .icons-sprite, .icons-agency, .icons-arrows, .icons-ashoka, .icons-bullet, .icons-calendar, .icons-close, .icons-close_big, .icons-gear, .icons-handle, .icons-iati, .icons-icons, .icons-marker, .icons-markers, .icons-money, .icons-plus, .icons-star, .icons-symbols, .icons-view {
-  background: url('/img/icons-s7dab9b43b8.png') no-repeat;
+  background: url('/img/icons-s7c5aa32bd0.png') no-repeat;
 }
 
 .icons-agency {
