--- a/public/css/sprites.css
+++ b/public/css/sprites.css
@@ -1,7 +1,7 @@
 /*** SPRITES ***/
 /* icons */
 .icons-sprite, .icons-agency, .icons-arrows, .icons-ashoka, .icons-bullet, .icons-calendar, .icons-close, .icons-close_big, .icons-gear, .icons-handle, .icons-iati, .icons-icons, .icons-marker, .icons-markers, .icons-money, .icons-plus, .icons-star, .icons-symbols, .icons-view {
-  background: url('/img/icons-s7c5aa32bd0.png') no-repeat;
+  background: url('../img/icons-s7c5aa32bd0.png') no-repeat;
 }
 
 .icons-agency {
@@ -78,7 +78,7 @@
 
 /* backgrounds */
 .backgrounds-sprite, .backgrounds-bkg_big_filter, .backgrounds-bkg_box, .backgrounds-bkg_boxes, .backgrounds-bkg_filter, .backgrounds-bkg_iati_filter, .backgrounds-bkg_navigation, .backgrounds-bkg_navigation_shadow, .backgrounds-bkg_paper, .backgrounds-bkg_timeline, .backgrounds-bkg_timeline_selected, .backgrounds-bkg_view_filter {
-  background: url('/img/backgrounds-s88c74f6a2b.png') no-repeat;
+  background: url('../img/backgrounds-s88c74f6a2b.png') no-repeat;
 }
 
 .backgrounds-bkg_big_filter {
