Fixes relative paths

--- a/css/sprites.css
+++ b/css/sprites.css
@@ -1,126 +1,1 @@
-/*** SPRITES ***/
-/* icons */
-.icons-sprite, .icons-agency, .icons-arrows, .icons-ashoka, .icons-bullet, .icons-calendar, .icons-close, .icons-close_big, .icons-gear, .icons-handle, .icons-iati, .icons-icons, .icons-marker, .icons-markers, .icons-money, .icons-plus, .icons-star, .icons-symbols, .icons-view {
-  background: url('../img/icons-s7c5aa32bd0.png') no-repeat;
-}
-
-.icons-agency {
-  background-position: 0 0;
-}
-
-.icons-arrows {
-  background-position: 0 -14px;
-}
-
-.icons-ashoka {
-  background-position: 0 -104px;
-}
-
-.icons-bullet {
-  background-position: 0 -148px;
-}
-
-.icons-calendar {
-  background-position: 0 -201px;
-}
-
-.icons-close {
-  background-position: 0 -267px;
-}
-
-.icons-close_big {
-  background-position: 0 -291px;
-}
-
-.icons-gear {
-  background-position: 0 -373px;
-}
-
-.icons-handle {
-  background-position: 0 -439px;
-}
-
-.icons-iati {
-  background-position: 0 -457px;
-}
-
-.icons-icons {
-  background-position: 0 -474px;
-}
-
-.icons-marker {
-  background-position: 0 -624px;
-}
-
-.icons-markers {
-  background-position: 0 -693px;
-}
-
-.icons-money {
-  background-position: 0 -757px;
-}
-
-.icons-plus {
-  background-position: 0 -827px;
-}
-
-.icons-star {
-  background-position: 0 -890px;
-}
-
-.icons-symbols {
-  background-position: 0 -955px;
-}
-
-.icons-view {
-  background-position: 0 -1108px;
-}
-
-/* backgrounds */
-.backgrounds-sprite, .backgrounds-bkg_big_filter, .backgrounds-bkg_box, .backgrounds-bkg_boxes, .backgrounds-bkg_filter, .backgrounds-bkg_iati_filter, .backgrounds-bkg_navigation, .backgrounds-bkg_navigation_shadow, .backgrounds-bkg_paper, .backgrounds-bkg_timeline, .backgrounds-bkg_timeline_selected, .backgrounds-bkg_view_filter {
-  background: url('../img/backgrounds-s88c74f6a2b.png') no-repeat;
-}
-
-.backgrounds-bkg_big_filter {
-  background-position: 0 0;
-}
-
-.backgrounds-bkg_box {
-  background-position: 0 -55px;
-}
-
-.backgrounds-bkg_boxes {
-  background-position: 0 -70px;
-}
-
-.backgrounds-bkg_filter {
-  background-position: 0 -83px;
-}
-
-.backgrounds-bkg_iati_filter {
-  background-position: 0 -138px;
-}
-
-.backgrounds-bkg_navigation {
-  background-position: 0 -193px;
-}
-
-.backgrounds-bkg_navigation_shadow {
-  background-position: 0 -273px;
-}
-
-.backgrounds-bkg_paper {
-  background-position: 0 -285px;
-}
-
-.backgrounds-bkg_timeline {
-  background-position: 0 -959px;
-}
-
-.backgrounds-bkg_timeline_selected {
-  background-position: 0 -1039px;
-}
-
-.backgrounds-bkg_view_filter {
-  background-position: 0 -1107px;
-}
+.icons-sprite,.icons-agency,.icons-arrows,.icons-ashoka,.icons-bullet,.icons-calendar,.icons-close,.icons-close_big,.icons-gear,.icons-handle,.icons-iati,.icons-icons,.icons-marker,.icons-markers,.icons-money,.icons-plus,.icons-star,.icons-symbols,.icons-view{background:url('../img/icons-s7c5aa32bd0.png') no-repeat}.icons-agency{background-position:0 0}.icons-arrows{background-position:0 -14px}.icons-ashoka{background-position:0 -104px}.icons-bullet{background-position:0 -148px}.icons-calendar{background-position:0 -201px}.icons-close{background-position:0 -267px}.icons-close_big{background-position:0 -291px}.icons-gear{background-position:0 -373px}.icons-handle{background-position:0 -439px}.icons-iati{background-position:0 -457px}.icons-icons{background-position:0 -474px}.icons-marker{background-position:0 -624px}.icons-markers{background-position:0 -693px}.icons-money{background-position:0 -757px}.icons-plus{background-position:0 -827px}.icons-star{background-position:0 -890px}.icons-symbols{background-position:0 -955px}.icons-view{background-position:0 -1108px}.backgrounds-sprite,.backgrounds-bkg_big_filter,.backgrounds-bkg_box,.backgrounds-bkg_boxes,.backgrounds-bkg_filter,.backgrounds-bkg_iati_filter,.backgrounds-bkg_navigation,.backgrounds-bkg_navigation_shadow,.backgrounds-bkg_paper,.backgrounds-bkg_timeline,.backgrounds-bkg_timeline_selected,.backgrounds-bkg_view_filter{background:url('../img/backgrounds-s88c74f6a2b.png') no-repeat}.backgrounds-bkg_big_filter{background-position:0 0}.backgrounds-bkg_box{background-position:0 -55px}.backgrounds-bkg_boxes{background-position:0 -70px}.backgrounds-bkg_filter{background-position:0 -83px}.backgrounds-bkg_iati_filter{background-position:0 -138px}.backgrounds-bkg_navigation{background-position:0 -193px}.backgrounds-bkg_navigation_shadow{background-position:0 -273px}.backgrounds-bkg_paper{background-position:0 -285px}.backgrounds-bkg_timeline{background-position:0 -959px}.backgrounds-bkg_timeline_selected{background-position:0 -1039px}.backgrounds-bkg_view_filter{background-position:0 -1107px}
