--- a/css/helpers.css
+++ b/css/helpers.css
@@ -1,15 +1,1 @@
-/* For modern browsers */
-.cf:before,
-.cf:after {
-  content: "";
-  display: table;
-}
-
-.cf:after {
-  clear: both;
-}
-
-/* For IE 6/7 (trigger hasLayout) */
-.cf {
-  zoom: 1;
-}
+.cf:before,.cf:after{content:"";display:table}.cf:after{clear:both}.cf{zoom:1}
