Adds mulypoligon query

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -606,7 +606,7 @@ $markerRadiusSize: 102px;
   left:50%;
   top:50%;
   margin-left:-1*$markerInnerSize;
-  margin-top:-1*$markerInnerSize);
+  margin-top:-1*$markerInnerSize;
   content: '';  
   position:absolute;
   width: $markerInnerSize;  
