Removed console.log

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -669,6 +669,7 @@ $markerRadiusSize: 102px;
     li:nth-child(10) { width:68px;}
     li:nth-child(12) { width:68px;}
     li:last-child { border:none; }
+    li.last { border:none; }
     z-index:1000;
   }
 
