spinner for ajax request working

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -700,6 +700,7 @@ $markerRadiusSize: 102px;
   left: 100px;
   width: 10px;
   height: 10px;
+  display:none; 
 }
 
 .ui-helper-hidden { display: none; }
