--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,6 +103,13 @@ h4 { font-size: 11px; font-weight:bold; }
   .box { top:0;}
 }
 
+// Markers
+.marker {
+  position:absolute;
+}
+
+
+
 // Basic infowindow 
 .box {
   $width: 304px;
