--- a/scss/style.scss
+++ b/scss/style.scss
@@ -588,7 +588,7 @@ h4 { font-size: 11px; font-weight:bold; }
         &:last-child { border:none; }
       }
     }
-    ul li a { border-bottom: 1px dashed #ccc; }
+    ul li a { border-bottom: 1px dashed #999; }
 
     .header {
       .hgroup { // header titles
