--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,6 +106,11 @@ h4 { font-size: 11px; font-weight:bold; }
 // Markers
 .marker {
   position:absolute;
+  width:14px;
+  height:14px;
+  
+  img {position:relative; display:block; width:100%; height:100%}
+  &:hover {cursor:pointer!important;}
 }
 
 
