--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,7 +105,7 @@ h4 { font-size: 11px; font-weight:bold; }
 }
 
 // Markers
-.marker {
+#map .marker {
   position:absolute;
   width:14px;
   height:14px;
@@ -585,7 +585,7 @@ h4 { font-size: 11px; font-weight:bold; }
       width: 283px;
       li {
 
-        display:none;
+      //  display:none;
 
         padding: 19px 0 19px 30px;
         font-size:15px;
@@ -601,7 +601,7 @@ h4 { font-size: 11px; font-weight:bold; }
         &:last-child { border:none; }
       }
     }
-    ul li a { border-bottom: 1px dashed #999; }
+    ul li a { border-bottom: 1px dashed #999; line-height:17px; }
 
     .header {
       .hgroup { // header titles
