Fixes last element in timeline

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -702,7 +702,7 @@ $markerRadiusSize: 102px;
     li:nth-child(10) { width:68px;}
     li:nth-child(12) { width:68px;}
     li:last-child { border:none; }
-    li.last { border:none; }
+    li.last { width:63px; border:none; }
     z-index:1000;
   }
 
