--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,6 +101,7 @@ h4 { font-size: 11px; font-weight:bold; }
 .infowindow {
   position:absolute;
   opacity:0;
+
   .box { top:0;}
 }
 
@@ -227,6 +228,8 @@ h4 { font-size: 11px; font-weight:bold; }
 .nav ul.filters {
   &.disabled > li > a { color:#ccc; background:url(../img/icons/arrows.png) no-repeat right -78px; }
 }
+
+.cancel { float:right; width: 227px; height: 40px; position: relative; right:-250px; top: 30px;  z-index: 10000; }
 
 .nav ul.filters li {
   position:relative;
@@ -785,4 +788,3 @@ $markerRadiusSize: 102px;
 .ui-slider-vertical .ui-slider-range-min { bottom: 0; }
 .ui-slider-vertical .ui-slider-range-max { top: 0; }
 
-.cancel { display:none; width: 227px; height: 40px; position: absolute; top: 30px; right: -4px; z-index: 10000; }
