--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,7 @@ h4 { font-size: 11px; font-weight:bold; }
   &.disabled > li > a { color:#ccc; background:url(../img/icons/arrows.png) no-repeat right -78px; }
 }
 
-.cancel { float:right; width: 227px; height: 40px; position: relative; right:-250px; top: 30px;  z-index: 10000; }
+.cancel { float:right; display:none; width: 227px; height: 40px; position: relative; right:-250px; top: 30px;  z-index: 10000; }
 
 .nav ul.filters li {
   position:relative;
