--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,7 @@ h4 { font-size: 11px; font-weight:bold; }
 // Infowindows
 .infowindow {
   position:absolute;
+  visibility: hidden;
   opacity:0;
 
   .box { top:0;}
